# Qwen3-0.6B-lora

./: Prompt.yml  environment.yml  pyproject.toml  sft_without_cot.py  zero_shot.py  zero_shot_sft.py
logs/: events.out.tfevents.1754199314.cleandeMacBook-Air.local.37854.0  events.out.tfevents.1754260342.cleandeMacBook-Air.local.41735.0  events.out.tfevents.1754261340.cleandeMacBook-Air.local.42417.0  events.out.tfevents.1754262060.cleandeMacBook-Air.local.43046.0  events.out.tfevents.1754372044.cleandeMacBook-Air.local.37014.0  events.out.tfevents.1754372056.cleandeMacBook-Air.local.37031.0  events.out.tfevents.1754372336.cleandeMacBook-Air.local.37452.0
output/: dev_complete.json
src/: data_loader.py  lora_data_loader.py  metric.py  zero_shot_parsers.py
